tests/should_fail/bug/borrowed_ghost.stderr
error: Use of borrowed or uninitialized variable x
 --> borrowed_ghost.rs:7:22
  |
7 |     *r = snapshot! { !x.inner() }; // r = (snapshot (not (inner x)), x)
  |                      ^^^^^^^^^^

error: aborting due to 1 previous error

